--- a/wwr/site-plan-rafting.css
+++ b/wwr/site-plan-rafting.css
@@ -16,13 +16,13 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #2f6690;  /* headlines on a white background */ 
-  --headline-color-on-color: #d9dcd6; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color:#d9dcd6; /* paragraph text on a colored background */ 
+  --headline-color-on-color: antiquewhite; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #2f6690; /* paragraph text on a white background */ 
+  --paragraph-color-on-color:antiquewhite; /* paragraph text on a colored background */ 
   --paragraph-background-color: #16425b;
   --nav-link-color: #16425b;
-  --nav-background-color: #d9dcd6;
-  --nav-hover-link-color: #d9dcd6;
+  --nav-background-color: antiquewhite;
+  --nav-hover-link-color: antiquewhite;
   --nav-hover-background-color: #396E94;
 }
 
