--- a/wwr/plzlink.css
+++ b/wwr/plzlink.css
@@ -1,24 +1,31 @@
-#chicken { max-width: 1600px;margin: 0 auto;}
+@import url('https://fonts.googleapis.com/css2?family=Lacquer&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
+#chicken { max-width: 1600px;margin: 0 auto;padding-top: 5px;}
 #background-height{height: 725px;}
 nav a {text-align: center;color: antiquewhite;}
 #hero-msg h1 {text-align: center;}
 #hero-msg h4{text-align: center;}
 .chicken {text-align: center;}
 main section{text-align: center;}
-body{background-color: #2f6690}
-header{background-color: #81C3D7}
-nav a:hover{background-color: #2f6690; color: antiquewhite;text-decoration: none;}
-.book{background-color: #2f6690; color: antiquewhite;text-decoration: none;} 
-.join{background-color: #2f6690; color: antiquewhite;text-decoration: none;}
+main section img{box-sizing: border-box;}
+body{background-color: #2f6690; font-family: Overlock, Helvetica, sans-serif; font-size: 22px; margin: 0; padding: 0;}
+header{background-color: #81C3D7; font-family: Lacquer, Arial, Sans-serif; font-size: 22px;}
+nav a:hover{background-color: #2f6690; color: antiquewhite;text-decoration: none;padding: 35px;}
+.book{background-color: #2f6690; color: antiquewhite;text-decoration: none; font-size: 18px;padding: 15px 30px;margin-top: 50px;border-radius: 5px;} 
+.join{background-color: #2f6690; color: antiquewhite;text-decoration: none; font-size: 18px;padding: 15px 30px;margin-top: 50px;border-radius: 5px;}
 .book:hover{background-color: #2f6690; color: antiquewhite;} 
 .join:hover{background-color: #2f6690}
 #background{background-color: #2f6690}
 .msg{background-color: #2f6690}
-footer{background-color: #81C3D7;; color: antiquewhite;text-decoration: none;}
-footer a{color: antiquewhite;}
+footer{background-color: #81C3D7;; color: antiquewhite;text-decoration: none;margin-top: 200px;}
+footer a{color: antiquewhite;padding: 25px 50px;}
 footer a:hover{color: antiquewhite; }
 .home-title{color:antiquewhite;}
 h4{color: antiquewhite;}
-.msg h2{color: antiquewhite;}
-.msg p{color: antiquewhite;}
-h2{color: antiquewhite;}
+.msg h2{color: antiquewhite;font-family: Overlock, Helvetica, sans-serif;}
+.msg p{color: antiquewhite;font-size: .8em;padding-bottom: 15px;}
+h2{color: antiquewhite;margin: 0;}
+.home-title {font-family: Lacquer, Arial, sans-serif;font-size: 2em;margin-top: 10px;}
+.rivers-card{margin: 200px 0;}
+.camping-card{margin: 200px 0;}
+.rapids-card{margin: 200px 0;}
+.card-img{border: 10px;}
