--- a/wwr/plzlink.css
+++ b/wwr/plzlink.css
@@ -28,4 +28,5 @@ h2{color: antiquewhite;margin: 0;}
 .rivers-card{margin: 200px 0;}
 .camping-card{margin: 200px 0;}
 .rapids-card{margin: 200px 0;}
-.card-img{border: 10px;}
+.card-img{border: 400px;border-width: 2px;border-style: solid;border-color: antiquewhite;}
+.hero-img { width: 100%; height: auto;display: block;}     
