--- a/wwr/plzlink.css
+++ b/wwr/plzlink.css
@@ -1,21 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Lacquer&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
 #chicken { max-width: 1600px;margin: 0 auto;padding-top: 5px;}
 #background-height{height: 725px;}
-nav a {text-align: center;color: antiquewhite;}
+nav a {text-align: center;color: antiquewhite; display: flex; justify-content: space-around;}
 #hero-msg h1 {text-align: center;}
 #hero-msg h4{text-align: center;}
-.chicken {text-align: center;}
+.chicken {text-align: center; max-width: 80px;}
 main section{text-align: center;}
 main section img{box-sizing: border-box;}
 body{background-color: #2f6690; font-family: Overlock, Helvetica, sans-serif; font-size: 22px; margin: 0; padding: 0;}
-header{background-color: #81C3D7; font-family: Lacquer, Arial, Sans-serif; font-size: 22px;}
+header{background-color: #81C3D7; font-family: Lacquer, Arial, Sans-serif; font-size: 22px;display: grid; grid-template-columns: 150px auto;}
 nav a:hover{background-color: #2f6690; color: antiquewhite;text-decoration: none;padding: 35px;}
 .book{background-color: #2f6690; color: antiquewhite;text-decoration: none; font-size: 18px;padding: 15px 30px;margin-top: 50px;border-radius: 5px;} 
 .join{background-color: #2f6690; color: antiquewhite;text-decoration: none; font-size: 18px;padding: 15px 30px;margin-top: 50px;border-radius: 5px;}
 .book:hover{background-color: #2f6690; color: antiquewhite;} 
 .join:hover{background-color: #2f6690}
-#background{background-color: #2f6690}
-.msg{background-color: #2f6690}
+#background{background-color: #2f6690; grid-column: 1/11; grid-row: 4/9;}
+.msg{background-color: #2f6690; grid-column: 6/10; grid-row: 6/7;}
 footer{background-color: #81C3D7;; color: antiquewhite;text-decoration: none;margin-top: 200px;}
 footer a{color: antiquewhite;padding: 25px 50px;}
 footer a:hover{color: antiquewhite; }
@@ -25,8 +25,19 @@ h4{color: antiquewhite;}
 .msg p{color: antiquewhite;font-size: .8em;padding-bottom: 15px;}
 h2{color: antiquewhite;margin: 0;}
 .home-title {font-family: Lacquer, Arial, sans-serif;font-size: 2em;margin-top: 10px;}
-.rivers-card{margin: 200px 0;}
-.camping-card{margin: 200px 0;}
-.rapids-card{margin: 200px 0;}
-.card-img{border: 400px;border-width: 2px;border-style: solid;border-color: antiquewhite;}
+.rivers-card{margin: 200px 0;max-width: 80px; grid-column: 2/4;}
+.camping-card{margin: 200px 0;max-width: 80px;grid-column: 5/7;grid-row: 2/3;}
+.rapids-card{margin: 200px 0;max-width: 80px;grid-column: 8/10; grid-row: 2/3;}
+.card-img{border: 400px;border-width: 2px;border-style: solid;border-color: antiquewhite;max-width: 80px;width: 100%;}
 .hero-img { width: 100%; height: auto;display: block;}     
+.logo{max-width: 80px;}
+#logo_link {padding-top: 5px;justify-self: center;align-self: center;}
+#hero-box {grid-column: 1/4; grid-row: 1/3;grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;}
+#hero-img {width: 100%;}
+#hero {display: grid;grid-template-columns: 1fr 3fr 1fr;margin-top: -100px; }
+#hero-msg {grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;}
+.mountains {width: 100%; grid-column: 2/7;grid-row: 5/8;}
